<resources>
    <string name="facebook_app_id" translatable="false">1055949821588553</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1055949821588553</string>
    <string name="app_name">Ping Pong</string>
    <string name="app_title">Ping Pong</string>
    <string name="app_version">1.0.0</string>
    <string name="contact_email">demo@demo.com</string>
    <string name="copyright_text">Copyright @ Pingpong Entertainment\nAll right reserved.</string>
    <string name="featured_tv_channels">Featured Tv Channel</string>
    <string name="latest_movie">Latest Movies</string>
    <string name="latest_tv_series">Latest Shows</string>
    <string name="more">More</string>
    <string name="movie">Movies</string>
    <string name="live_tv">Live TV</string>
    <string name="tv_series">Shows</string>
    <string name="country">Country</string>
    <string name="genre">Genre</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="no_item_found">No item found</string>
    <string name="cast_n_crew">Cast</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="director">Director :</string>
    <string name="comments">Comments</string>
    <string name="your_comments">Your Comments</string>
    <string name="add_comments">Add Comments</string>
    <string name="no_internet">No internet connection !</string>
    <string name="copyright">Copyright</string>
    <string name="contact_us">Contact Us</string>
    <string name="fetch_error">Unable to fetch data</string>
    <string name="error_toast">Something went wrong ! try later</string>
    <string-array name="nav_item_name">
        <item>Home</item>
        <item>Movies</item>
        <item>Shows</item>




        <item>Affiliate</item>
        <item>Vips Wallet</item>

        <item>Subscription</item>
        <item>Share</item>
        
        <item>Settings</item>
        <item>Help</item>
        <item>Sign Out</item>

    </string-array>
    <string-array name="nav_item_image">
        <item>ic_home</item>
        <item>icon_movie</item>
        <item>icon_tv_series</item>
        <item>ic_affiliate_marketing</item>
        <item>ic_baseline_account_balance_wallet_24</item>

        <item>ic_subscriptions_black_24dp</item>
        <item>ic_share_white</item>
        <item>ic_settings_white</item>
        <item>ic_info_blue</item>
        <item>outline_lock_24</item>
        











    </string-array>
    <string-array name="nav_item_name_2">
        <item>Home</item>
        <item>Movies</item>
        <item>Shows</item>

        <item>Genre</item>
        <item>Country</item>

        <item>Settings</item>
    </string-array>
    <string-array name="nav_item_image_2">
        <item>ic_home</item>
        <item>icon_movie</item>
        <item>icon_tv_series</item>

        <item>ic_subscriptions_black_24dp</item>
        <item>outline_settings_24</item>
        <item>outline_lock_24</item>
        <item>outline_settings_24</item>
    </string-array>
    <string-array name="state_list">
        <item>Select State</item>
        <item>Andhra Pradesh</item>
        <item>Andman And Nicobar</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra And Nagar Haveli</item>
        <item>Daman And Diu</item>
        <item>Delhi</item>
        <item>Goa </item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu And Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Puducherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttrakhand</item>
        <item>West Bengal</item>
    </string-array>
    <string name="year_range_start">1900</string>
    <string name="year_range_end">2020</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_reply">ReplyActivity</string>
    <string name="program_guide">Program Guide</string>
    <string name="live">Live</string>
    <string name="watching_on">Watching live on</string>
    <string name="all_tv_channel">All TV Channels</string>
    <string name="you_may_also_like">You may also like</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="tv_channels">Tv Channels</string>
    <string name="watching_catch_up_tv">Watching Catch-up TV</string>
    <string name="deactive_account_text">If you do not want to use this account you can de-active easily.</string>
    <string name="reason_to_deactivate_account">Reason to deactivate account</string>
    <string name="enter_password">Enter Password</string>
    <string name="terms_condition_text">
        Term Condition
    </string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="explore_by_genre">Explore By Genre</string>
    <string name="explore_by_country">Explore By Country</string>
    <string name="share_this_app">Share This App</string>
    <string name="share_body">I would like to share Pinpong App.  Here you can download this from playstore :\n    https://play.google.com/store/apps/details?id=com.pingpong</string>
    <string name="term_of_services">Term of Services</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="account_deactivate_info"><![CDATA[Your account will be deactivate & only admin can activate again.]]></string>
    <string name="regular_program">Regular Program</string>
    <string name="international">International</string>
    <string name="server">Server</string>
    <string name="_1080p">1080P</string>
    <string name="dummy_name">Demo </string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="push_notification">Push Notification</string>
    <string name="no_data_found">No data found.</string>
    <string name="no_subscription_history">No subscription history found.</string>
    <string name="plan">Plan</string>
    <string name="upgrade_membership">Upgrade Membership</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="status">Status</string>
    <string name="paid_content">You are trying to watch a paid content. Please subscribe a plan first.</string>
    <string name="subscription_required">Subscription Required</string>
    <string name="subscribe_text">Subscribe</string>
    <string name="subscribe_error">To subscribe a plan, you have to login first.</string>
    <string name="something_went_text">Something went wrong, try again or contact to your developer.</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="downloading">Downloading</string>
    <string name="download_completed">Download Completed</string>
    <string name="watch_now">Watch Now</string>
    <string name="download">Download</string>
    <string name="select_server">Select Server</string>
    <string name="home">Home</string>
    <string name="all_kids_videos">All Kids Videos</string>
    <string name="all_tv_series">Unlimited Shows</string>
    <string name="unlimited_movies">Unlimited Movies</string>
    <string name="please_select_your_payment_method">Please select your payment method</string>
    <string name="download_appear_text">Your download item will be appear here.  Download item not found.</string>
    <string name="searcHError_message">Title Or Type can\'t be empty</string>
    <string name="year_range">Year Range</string>
    <string name="cancel">Cancel</string>
    <string name="tv_category">TV Category</string>
    <string name="login">Login</string>
    <string name="all_countries">All Countries</string>
    <string name="all_categories">All Categories</string>
    <string name="external_download">External Download</string>
    <string name="inApp_download">In App Download</string>
    <string name="all_genres">All Genres</string>
    <string name="file_already_downloaded">File already downloaded.</string>
    <string name="file_not_found">File not found</string>
    <string name="male">Male</string>
    <string name="user_name_">User Name:</string>
    <string name="active_plan_">Active Plan:</string>
    <string name="email_">Email:</string>
    <string name="expire_date_">Expire Date:</string>
    <string name="active_subscription">Active Subscription</string>
    <string name="no_download_server_found">No download link found</string>
    <string name="no_video_found">No video found</string>
    <string name="failed_to_communicate">Failed to communicate with server</string>
    <string name="no_configuration_data_found">No configuration data found.</string>
    <string name="please_login_first_to_see_favorite_list">Please login to see favorite list.</string>
    <string name="episode">Episode</string>
    <string name="recent_watched">Recent Watched</string>
    <string name="helpnumber">+91 8888059294</string>
    <string name="no_trailer_found">No trailer found</string>
    <string name="affiliate_link">https://play.google.com/store/apps/details?id=com.gab.android</string>
    <string name="payment_help">Please, click here to complete your transaction</string>
    <string name="wallet_link">https://play.google.com/store/apps/details?id=com.vipswallet.shopping</string>
    <string name="ludogame_link">https://vipswallet.com/VipsLudo/</string>
    <string name="pingpong_link">https://play.google.com/store/apps/details?id=com.pingpong</string>
    <string name="admob_banner_id">ca-app-pub-5667475017902749/3031064230</string>
    <string name="content_url"><![CDATA[https://storage.googleapis.com/gvabox/media/samples/stock.mp4]]></string>
    <string name="ad_tag_url"><![CDATA[https://pubads.g.doubleclick.net/gampad/ads?sz=640x480&iu=/124319096/external/single_ad_samples&ciu_szs=300x250&impl=s&gdfp_req=1&env=vp&output=vast&unviewed_position_start=1&cust_params=deployment%3Ddevsite%26sample_ct%3Dlinear&correlator=]]></string>
</resources>