<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/home"
        android:icon="@drawable/ic_home"/>
    <item
        android:title="@string/search"
        android:iconTint="#040404"
        android:icon="@drawable/ic_search_grey"/>
    <item
        android:title="@string/movie"
        android:icon="@drawable/icon_movie"/>
<!--    <item-->
<!--        android:title="@string/live"-->
<!--        android:visible="false"-->
<!--        android:icon="@drawable/icon_tv"/>-->
    <item
        android:title="Shows"
        android:icon="@drawable/icon_tv_series"/>
<!--    <item-->
<!--        android:title="@string/favorite"-->
<!--        android:visible="false"-->
<!--        android:icon="@drawable/icon_favorite"/>-->

    <item
        android:title="Profile"
        android:visible="true"
        android:icon="@drawable/outline_person_24"/>
</menu>